@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.7'
+    id 'org.springframework.boot' version '2.7.10'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -33,16 +33,24 @@ dependencies {
     implementation 'org.springframework.data:spring-data-r2dbc'
     implementation 'org.springframework.data:spring-data-commons'
 
-    implementation 'com.navercorp.fixturemonkey:fixture-monkey:0.5.1'
-    implementation 'com.navercorp.fixturemonkey:fixture-monkey-jackson:0.5.1'
-    testImplementation 'org.mockito:mockito-core:5.1.1'
-    testImplementation 'org.mockito:mockito-inline:5.1.1'
-    implementation 'org.slf4j:slf4j-reload4j:2.0.5'
+    implementation 'com.navercorp.fixturemonkey:fixture-monkey:0.5.2'
+    implementation 'com.navercorp.fixturemonkey:fixture-monkey-jackson:0.5.2'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
+    implementation 'org.slf4j:slf4j-reload4j:2.0.7'
+
+    implementation 'org.jooq:jooq:3.18.2'
+
+    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+test {
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
 }
